liberty.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websphere-liberty-app
  namespace: bogdan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websphere-liberty-app
  template:
    metadata:
      labels:
        app: websphere-liberty-app
    spec:
      containers:
      - name: websphere-liberty-app
        image: websphere-liberty
        ports:
          - containerPort: 9080
          - containerPort: 9443
        resources:
          requests:
            cpu: 400m
