mysql-openshift.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-wasapp-client
  labels:
    app: mysql-wasapp-client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mysql-wasapp-client
  template:
    metadata:
      labels:
        app: mysql-wasapp-client
    spec:
      containers:
      - name: mysql
        image: mysql:latest
        ports:
        - containerPort: 3306
