nginx.yaml
apiVersion: v1
kind: Pod
metadata:
   name: nginx
spec:
   containers:
      - image: nginx
        name: nginx-http
        ports:
          - containerPort: 8080
            protocol: TCP
