openshift-wasapp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wasapp
  labels:
    app: wasapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wasapp
  template:
    metadata:
      labels:
        app: wasapp
    spec:
      volumes:
      - name: wasapp-volume
        emptyDir: {}
      containers:
        - name: wasapp
          image: registry.ocp1.bank.gov.ua/bogdan/wasapp
          imagePullPolicy: Always
          ports:
          - containerPort: 9080
          - containerPort: 9443
          volumeMounts:
          - name: wasapp-volume
            mountPath: /opt/ibm/wlp/usr/servers/wasapp/dropins
#      imagePullSecrets:
#      - name: docker-registry
