postgres-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-app
  namespace: bogdan
spec:
  replicas: 2
  selector:
    matchLabels:
      app: postgres-app
  template:
    metadata:
      labels:
        app: postgres-app
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        ports:
        - containerPort: 5432
