liberty-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: websphere-liberty-app
  namespace: bogdan
  labels:
    name: websphere-liberty-app
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 9080
      targetPort: 9080
    - name: other
      protocol: TCP
      port: 9443
      targetPort: 9443
  selector: 
    app: websphere-liberty-app
