nginx_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort 
  selector:
    app: nginx
  ports:
    - port: 7000
      targetPort: 80
