svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: identidock-svc
spec:
  selector:
    app: identidock-app
  type: LoadBalancer
  ports:
    - port: 9091
      targetPort: 9090
