wasapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wasapp
  labels:
    app: wasapp
spec:
  type: NodePort
  selector:
    app: wasapp
  ports:
  - name: http
    protocol: TCP
    port: 9080
    nodePort: 31000
